--- a/src/assets/scss/_chips.scss
+++ b/src/assets/scss/_chips.scss
@@ -2,7 +2,8 @@
 	text-align: center;
 	padding: 10px;
 	white-space: nowrap;
-	overflow: auto;
+	overflow-x: auto;
+	overflow-y: hidden;
 }
 
 .chip {
@@ -17,6 +18,12 @@
 	font-size: 25px;
 	font-weight: 700;
 	position: relative;
+	color: $white;
+	font-family: inherit;
+	padding: 0;
+	appearance: none;
+	border: 0;
+	outline: none;
 
 	&::before {
 		content: '';
@@ -107,4 +114,8 @@
 			);
 		border-radius: 100%;
 	}
+}
+
+.chip--active {
+	box-shadow: 0 0 5px 0 #ffd700;
 }
